3way editing
